fix some layout issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,3 +5,7 @@
 .scroll-bar-none{
     scrollbar-width: none;
 }
+
+.pointer-events-all{
+    pointer-events: all;
+}
